# cotrendy

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  cotrendy_version.py  example.py  requirements.txt  setup.cfg  setup.py
cotrendy/: __init__.py  catalog.py  cbvs.py  globalconf.py  lightcurves.py  map.py  test  utils.py
tools/: calculate_map_runtime_stats.py  ngts.py
