[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = cotrendy
description = Generalised cotrending toolkit
long_description = A toolkit for cotrending experiments primarily written for the PLATO mission
author = James McCormac
author_email = jmccormac001@gmail.com
license = MIT
url = https://github.com/PLATO-Mission/cotrendy
edit_on_github = False
github_project = PLATO-Mission/cotrendy

[entry_points]
